[tool.poetry]
name = "gee-python"
version = "0.1.0"
description = ""
authors = ["ials <ials@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter-book = "^1.0.3"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
polars = "^1.11.0"
altair = "^5.4.1"
plotly = "^5.24.1"
ghp-import = "^2.1.0"
vega-datasets = "^0.9.0"
earthengine-api = "^1.1.5"
folium = "^0.18.0"
pyppeteer = "^2.0.0"
requests-html = "^0.10.0"
pyproject-hooks = "1.0.0"
pandoc = "^2.4"
pypandoc = "^1.14"
pypandoc-binary = "^1.14"


[tool.poetry.group.dev.dependencies]
notebook = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
